Changelog
=========


1.14.3 (unreleased)
-------------------

- Nothing changed yet.


1.14.2 (2015-03-25)
-------------------

- Reduce maximum transaction note length used by ftw.upgrade.
  [jone]


1.14.1 (2015-03-18)
-------------------

- Command: fix instance discover when bound to public interface.
  [jone]


1.14.0 (2015-02-24)
-------------------

- Command: add fake terminal fallback when blessed cannot be loaded.
  This can happen for example when Python is built without curses support.
  [jone]

- ``bin/upgrade recook`` command for recooking resources.
  [jone]

- Recook resources after installing upgrades.
  [jone]

- plone.reload support for upgrade step directory.
  [jone]


1.13.0 (2015-02-20)
-------------------

- ``bin/upgrade``: automatically authenticate with a tempfile
  negotiation mechanism when no other authentication information is
  provided.
  [jone]

- New ``bin/upgrade user`` command for testing authentication.
  [jone]


1.12.0 (2015-02-16)
-------------------

- Add ``bin/upgrade`` commands ``sites``, ``list`` and ``install``.
  This makes it possible to install upgrades from the console.
  [jone]

- Update upgrade step scaffold to support plone.reload.
  [jone]

- New JSON API implemented, accessible with `/upgrades-api`.
  [jone]

- Executioner: `install_upgrades_by_api_ids` was added, allowing to install
  a selection of upgrades identified by API ugprade ids.
  [jone]

- Gatherer: `get_upgrades_by_api_ids` was added, returning upgrade infos
  for a selection of API upgrade ids.
  [jone]

- Gatherer: `get_upgrades` is deprecated and replaced by `get_profiles`.
  `get_profiles` now has a `proposed_only` flag.
  [jone]


1.11.0 (2015-01-08)
-------------------

- Reverse post upgrade adapter ordering.
  The order was reversed, it should execute dependencies first.
  [jone]

- create-upgrade: Make sure to quote argument passed to bin/upgrade.
  [lgraf]

- Add a ``create-upgrade`` script which can be installed globally.
  [jone]
