@@ -10,8 +10,8 @@ class TestTransactionNote(TestCase):
         transaction.begin()
 
     def tearDown(self):
-        self.assertLess(len(transaction.get().description), 60000,
-                        'Transaction note should never be longer than 60000')
+        self.assertLess(len(transaction.get().description), 65535,
+                        'Transaction note should never be longer than 65535')
         transaction.abort()
 
     def test_transaction_note_is_updated(self):
@@ -26,8 +26,8 @@ class TestTransactionNote(TestCase):
             transaction.get().description)
 
     def test_description_is_removed_when_note_gets_too_long(self):
-        # Transaction note size is limited to 60000 characters
-        description = 'A' * (60000 / 2)
+        # Transaction note size is limited to 65535 characters
+        description = 'A' * (65535 / 2)
 
         note = TransactionNote()
         note.add_upgrade('my.package:default', ('1000',), description)
@@ -51,7 +51,7 @@ class TestTransactionNote(TestCase):
         transaction.get().note('Some notes..')
 
         note = TransactionNote()
-        for destination in range(1, (60000 / len(profileid)) + 2):
+        for destination in range(1, (65535 / len(profileid)) + 2):
             note.add_upgrade(profileid, (str(destination),), '')
         note.set_transaction_note()
 
@@ -67,3 +67,16 @@ class TestTransactionNote(TestCase):
             result.endswith('...'),
             'Expected transaction note to be cropped, ending with "..." '
             'but it ends with "%s"' % result[-30:])
+
+    def test_cropped_according_to_already_existing_notes(self):
+        # When the transaction note has already the maximum length
+        # we cannot add anymore infos..
+        profileid = 'my.package:default'
+        transaction.get().note('.' * 65533)
+
+        TransactionNote().add_upgrade(profileid, ('1000',), '')
+        TransactionNote().set_transaction_note()
+
+        self.assertLess(
+            len(transaction.get().description), 65535,
+            'Transaction note is too long, should be less than 65535')
